# roq-algo-playground

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: .gitignore  CMakeLists.txt
conda/: build.sh  meta.yaml
src/roq/algo/: CMakeLists.txt
src/roq/algo/playground/: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  config.cpp  config.hpp  factory.cpp  factory.hpp  main.cpp  settings.cpp  settings.hpp  strategy.cpp  strategy.hpp  test.ipynb  test.py  test.toml  test2.py
src/roq/algo/playground/flags/: .gitignore  CMakeLists.txt  flags.json  simulation.json
src/roq/algo/python/: CMakeLists.txt  main.cpp
src/roq/arbitrage/: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  config.cpp  config.hpp  main.cpp  settings.cpp  settings.hpp  strategy.cpp  strategy.hpp  test.sh  test.toml
src/roq/arbitrage/flags/: .gitignore  CMakeLists.txt  flags.json  model.json  simulation.json  test.json
src/roq/samples/algo/: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  config.cpp  config.hpp  factory.cpp  factory.hpp  main.cpp  module.cpp  settings.cpp  settings.hpp  simulation.toml  simulator.toml  strategy.toml  test.sh
src/roq/samples/algo/arbitrage/: CMakeLists.txt  instrument.cpp  instrument.hpp  parameters.hpp  strategy.cpp  strategy.hpp
src/roq/samples/algo/flags/: CMakeLists.txt  flags.json  simulation.json
src/roq/samples/algo/impl/: CMakeLists.txt  instrument.cpp  instrument.hpp  parameters.hpp  strategy.cpp  strategy.hpp
src/roq/samples/algo/playground/: CMakeLists.txt  README.md  application.cpp  application.hpp  config.cpp  config.hpp  factory.cpp  factory.hpp  main.cpp  settings.cpp  settings.hpp
src/roq/samples/algo/playground/flags/: flags.json  simulation.json
src/roq/samples/algo/python/: main.cpp  test.py
src/roq/samples/algo/strategy/: CMakeLists.txt  arbitrage.cpp  arbitrage.hpp  factory.cpp  factory.hpp  instrument.cpp  instrument.hpp  parameters.hpp
test/: .gitignore  CMakeLists.txt
